# docgemma-connect

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  generate_p10_12.py  generate_p1_3.py  generate_p4_6.py  generate_p7_9.py  main.py  modal_deploy.py  pyproject.toml  requirements.txt  test_agent.py  test_ehr_tools.py  test_medplum.py  test_modal.py  test_tools.py  thinking_experiments.py
agent/: graph.py  nodes.py  state.py  tools.py
data/: FHIR_IMAGING_SOURCES.md  patient_1.json  patient_2.json  patient_3.json
data/fhir/AllergyIntolerance/: 028aebc6-7141-4e97-acd9-422866db760f.json  033ec590-aa97-40ea-9a4b-1c831423d3bd.json  06fbe647-3a31-4319-ac75-24106692bec7.json  0744a21f-b4aa-467c-9dab-cefabd17f43d.json  07646ecb-10e3-447b-a56f-cbde461ec2a0.json  0d1ce373-7084-4574-a156-90275454c772.json  0d992dc6-f97b-4400-b52b-931f0082a32e.json  1167a88b-cc84-4e47-9b57-edfe17470077.json  1249ed22-d316-4cdf-b3e2-95737dddb4e4.json  16814af9-71d8-4089-8e4b-0fa41404cf9d.json  16e7be02-cfec-407d-8886-8556b9de42e1.json  1d24a999-8670-41f2-8f7d-fff6c33bebe7.json  1d6ce70b-7185-4363-bcfa-bde356e334d4.json  1f4f7a58-da67-4703-955e-8cfb8d3161a7.json  20cfeb94-0e88-4922-9ad5-bf98852e5fc2.json  216851ce-5eb7-4de7-bc6b-49356f5c0b01.json  238cd888-f57a-4bc0-b2c5-017489e72dcc.json  24d86fb7-798f-4888-8c15-51816ee77124.json  29ea1316-cbe7-474d-8623-745222d2abaf.json  2e3fb3c8-f779-4553-be9e-d28ffa1408b3.json  2e78e52b-6a0f-4de2-990b-207f2bd2fa5a.json  30800a02-671d-48e2-9e99-75c3c40e360b.json  31887948-4189-4ec7-9b3b-c7ed516062cb.json  3258f3f0-dca2-40e0-a380-784660b47f07.json  379dd93e-685c-42ca-9f73-63ce3ccc0e98.json  463d9bef-ebc3-49f6-85c9-442aa622ce48.json  475ca648-cb03-44ec-bb64-38c5b6fde69b.json  4778ca8e-42a6-4aae-8f95-e488d22337ce.json  4a016921-1b62-4244-8e0d-3b90a67c677a.json  4abd6507-2d5c-4ad9-8a29-22d04f4f38bb.json  4af5f77d-9633-424f-a635-0113eae295ac.json  4f6629f6-7e1d-4a2e-8425-c6aa1e4da8e6.json  56d5cac8-5252-42f5-b6f5-b4c70a37b8c7.json  58f888fe-19a5-4ca7-aa38-6dbe07d5ba31.json  5996b4e3-d6f9-4417-935c-897f81ee4355.json  5d8d2c05-6f72-468c-ab98-8da5ac76ba37.json  63266403-6ef9-4002-9b87-427820f4f711.json  635862f6-c51d-47e9-bbb7-deac2e715e0d.json  6477adb2-911a-43df-90d4-c37ca2bc81b1.json  68edebda-d291-4284-bfb9-b4c95f563d68.json  (+61 more)
data/fhir/Condition/: 06016b8b-59b2-423b-9350-8334155fc12e.json  07bd32d3-44dc-4d5d-b4bc-62a463eb2bf1.json  084b2f72-7979-42ac-b9b5-697943f5759d.json  0b1bcf6c-abc2-4070-b9d1-27ca59c68c48.json  (+172 more)
doc/: CLAUDE_CODE_MEDPLUM.md  DOCGEMMA_FLOWCHART.md  DOCGEMMA_FLOWCHART_V2.md  DOCGEMMA_IMPLEMENTATION_GUIDE.md  DOCGEMMA_TEST_CASES.md  DOCGEMMA_TEST_CASES_V2.md  DOCGEMMA_TEST_SESSIONS.json  DOCGEMMA_V3_AGENT_GRAPH.md  DOCGEMMA_V3_TEST_SESSIONS.json  MEDGEMMA_PROMPTING_GUIDE.md  QUICK_DEMO_SHARING.md  docgemma_test_cases.json  docgemma_test_cases_v2.json
eval/: result_routing_experiments.py  synthesis_experiments.py  test_tool_planning.py  test_tools.py  tool_selection_experiments.py
notebooks/: docgemma_colab_demo.ipynb
src/docgemma/: __init__.py  model.py  protocols.py  remote.py
thinking_experiments/20260211_014112/: manifest.json  report.md  results.jsonl  results_original.jsonl
(+1605 files in other folders)
