[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docgemma"]

[project]
name = "docgemma-connect"
version = "0.1.0"
description = "Agentic medical AI with autonomous tool calling, powered by MedGemma 4B for resource-limited healthcare environments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "langgraph>=0.2.0",
    "nest-asyncio>=1.6.0",
    "outlines>=1.2.9",
    "pillow>=12.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
]
